2006-11-20 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/main_app.rb: also close scan_clipboard thread if needed
    * lib/fantasdic/ui/result_text_view.rb: remove marks when text buffer is
    cleared

    * fantasdic.sgml: docbook man page
    * make_release.sh: man page

    * fantasdic.desktop: fixed category and icon

    * lib/fantasdic/ui/main_app.rb: was displaying wrong message in status bar
    and close connection when a thread is killed.

2006-11-18 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/add_dictionary_dialog.rb: use focus-out-event
    * lib/fantasdic/ui/main_app.rb: close look up thread before quitting or
    when looking up a word while a thread is still alive

2006-11-17 Mathieu Blondel <mblondel@cvs.gnome.org>

    * NEWS: preparing upcoming release 1.0-beta2
    * make_release.sh: upload packages

    * bin/pre-setup.rb: added bugzilla
    * lib/fantasdic.rb: added bugzilla and translators

2006-11-16 Mathieu Blondel <mblondel@cvs.gnome.org>

    * data/fantasdic/glade/add_dictionary_dialog.glade:
    * data/fantasdic/glade/server_infos_dialog.glade:
    * lib/fantasdic/command_line.rb:
    * lib/fantasdic/preferences.rb:
    * lib/fantasdic/ui/add_dictionary_dialog.rb:
    * lib/fantasdic/ui/result_text_view.rb:
    * lib/fantasdic/ui/utils.rb: revamped add dictionary dialog. Split into two
    tabs, one for general informations, one for database selection.
    Database selection is now clearer since available databases and
    selected databases are separated. New status bar and greyed  window to give
    the user informations about what is happening. New "server informations"
    button. Double-click on a database row to get informations about it.

    * data/fantasdic/glade/main_app.glade:
    * data/fantasdic/ui/toolbar.xml:
    * lib/fantasdic/ui/add_dictionary_dialog.rb:
    * lib/fantasdic/ui/main_app.rb: removed the lookup button and put a combobox